deployments/kubernetes/svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: ws-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30008
      protocol: TCP
  selector:
    app: customer-papi
