deployments/kubernetes/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
    name: originate-tls
    namespace: "service-mesh"
spec:
  host: "*"
  trafficPolicy:
    tls:
      mode: DISABLE
